Fixed terrain blender algorithm, added carving util and changed noise-chunk workarounds